5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1822_3182.log
== TEST (2019-06-13 10:45:28) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:37) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:23) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(v, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:53:23) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- EXECUTION TIME:
0.613838
-- ERROR:
  File "/home/codebench/codes/1822/3182/main.py", line 9
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:25) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:26) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:27) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:29) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:40) 
-- CODE:
from numpy import*

v = array(eval(input("numeros: ")))

n = zeros(10, dtype=int)

for i in range(size(v)):
	

-- EXECUTION TIME:
0.911143
-- ERROR:
  File "/home/codebench/codes/1822/3182/main.py", line 9
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
